@@ -60,7 +60,7 @@ copy('augeas_box/etc/ssh/sshd_config', "$wr_conf1/etc/ssh/") ;
 my $wanted = sub { 
     return if /svn|data$|~$/ ;
     s!data/!! ;
-    -d $File::Find::name && mkpath( "$wr_model1/$_", {mode => 0755}) ;
+    -d $File::Find::name && mkpath( ["$wr_model1/$_"], 0, 0755) ;
     -f $File::Find::name && copy($File::Find::name,"$wr_model1/$_") ;
 };
 find ({ wanted =>$wanted, no_chdir=>1} ,'data') ;
@@ -143,6 +143,13 @@ my $expected_map
      'MasterModel/SshdWithAugeas.pl' => [
 					 'MasterModel::SshdWithAugeas',
 					],
+     'MasterModel/References.pl' => [
+				     'MasterModel::References::Host',
+				     'MasterModel::References::If',
+				     'MasterModel::References::Lan',
+				     'MasterModel::References::Node',
+				     'MasterModel::References'
+				    ],
     };
 
 is_deeply($expected_map, $map, "Check file class map") ;
