@@ -1,3 +1,8 @@
+2009-03-12  Dominique Dumont  <dominique.dumont@hp.com>
+
+	* lib/Config/Model/models/Itself/CommonElement.pl: 'choice' is
+	also available for 'reference' values
+
 2009-03-10  Dominique Dumont  <dominique.dumont@hp.com>  v1.209
 
 	* t/*.t: Backported mkpath calls to File::Path delivered by perl
